[package]
name = "fget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
indicatif = "0.17.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
native-tls = "0.2.10"
tempfile = "3.3.0"
http = "0.2.8"