[package]
name = "fget"
version = "0.1.0"
authors = ["Anh Tran (tjeubaoit) <anhtn.bk@gmail.com>"]
description = "Minimal HTTP downloader in Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
indicatif = "0.17.0"
native-tls = "0.2.10"
tempfile = "3.3.0"
http = "0.2.8"